fix content children spacing

--- a/components/content/content.scss
+++ b/components/content/content.scss
@@ -26,7 +26,7 @@ $section-sm-padding-y: 2 * $spacer;
     margin-top: 2 * $spacer;
   }
 
-  :last-child {
+  > :last-child {
     margin-bottom: 0;
   }
 }
